<resources>
    <string name="app_name">Muslim\'s Alarm</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">Waking Up for Fajr, Qiyam, or any prayer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_alarms">Alarms</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_Settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="tab_text_1">Tones</string>
    <string name="tab_text_2">Loud Tones</string>
    <string name="tab_text_3">Files</string>
    <string name="fajr">Fajr</string>
    <string name="sun">Sunrise</string>
    <string name="zuhr">Zuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="ishaa">Ishaa</string>
    <string name="request_app_permissinos">Welcome to Muslim Alarm App! The app needs Location permission, for prayer time calculation using your location. Please allow access to your location if prompted.</string>
    <string name="location_net">Network (Internet)</string>
    <string name="gps">GPS</string>
    <string name="rejected_permission">You have rejected accessing to your location. The app cannot work without it. Restart the app to show the permission request again or enable this permission from application settings</string>
    <string name="cannot_get_location">Cannot get your location. Go to phone settings and enable location in order to calculate prayer times</string>
    <string name="config_title">Please take a moment to configure the Salaat times to your requirements.</string>
    <string name="explain_default_config">By default Salaat times are configured using Muslim World League calculation method, Shafii Juristic for Asr time calculations and makes no adjustment for people living in higher latitudes.   Other calculation methods include: Karachi, ISNA, Makkah, Egypt, Tehran, Jafri   You can choose to use the default settings (don\'t worry you can change them later), or configure the Salaat times to your requirements below.</string>
    <string name="title_onboarding_calc_method">Configure Prayer Times</string>
    <string name="button_configure_now">Configure settings now \u2192</string>
    <string name="button_use_default">Use default settings \u2192</string>
    <string name="button_prev">\u2190 Previous</string>
    <string name="button_next">Next \u2192</string>
    <string name="button_done">Done</string>
    <string name="calc_method">Calculation Method</string>
    <string name="calc_method_explain">
        Please select the calculation method for Salaat in your area.
        Muslim World League should work for most people.
    </string>
    <string name="asr_method">Asr Juristic</string>
    <string name="asr_method_explain">
        Shafii is the standard most often used. Please select the method that best suits you.
        If you are not sure, leave Shafii selected, you can always change it later.
    </string>
    <string name="calc_method_karachi">KARACHI - University of Islamic Sciences</string>
    <string name="calc_method_oman">OMAN</string>
    <string name="calc_method_isna">ISNA - Islamic Society of North America</string>
    <string name="calc_method_mwl">MWL - Muslim World League</string>
    <string name="calc_method_makkah">MAKKAH - Umm al-Qura</string>
    <string name="calc_method_egypt">EGYPT - Egyptian General Authority of Survey</string>
    <string name="calc_method_tehran">TEHRAN - Institute of Geophysics, University of Tehran</string>
    <string name="calc_method_jafari">JAFARI - Ithna Ashari</string>
    <string name="asr_method_shafii">Shafii (Standard)</string>
    <string name="asr_method_hanfi">Hanfi</string>
    <string name="time_title">Time format</string>
    <string name="time_12">12 hours (Example: 01:00 pm)</string>
    <string name="time_24">24 hours (Example: 13:00)</string>
    <string name="high_latitude">High latitude adjustment</string>
    <string name="high_latitude_explain">For people living in higher latitudes, the prayer times can be incorrect. If the prayer times seem incorrect, try changing this value.   During the summer months One-Seventh method produces a later Fajr time than Angle based method. If you perfer Angle based method, please change below.</string>
    <string name="high_lat_none">None</string>
    <string name="high_lat_midnight">Midnight</string>
    <string name="high_lat_one_seventh">One-seventh of night</string>
    <string name="high_lat_angle_based">Angle based</string>
    <string name="auto_location">Option 2: Automatic Location Detection</string>
    <string name="detect_with_gps">Detect using GPS</string>
    <string name="detect_with_network">Detect using Network</string>
    <string name="option_manual_location">Option 3: Manual Location Entry</string>
    <string name="longitude">Longitude…</string>
    <string name="latitude">Latitude…</string>
    <string name="set_manual_location">Set manual location</string>
    <string name="already_set_location">There is a location already set. If you do not want to change it, tap on NEXT button below.</string>
    <string name="please_enter_lng_lat">Please enter longitude and latitude</string>
    <string name="gps_not_enable">GPS is not enabled. Please enable it from device settings in screen top near WiFi (or you can use Network Location)</string>
    <string name="gps_no_last_location">Cannot get your last location</string>
    <string name="network_location_not_enable">Network location is not enabled. Please enable it from device settings</string>
    <string name="use_gps_anyway">Use GPS anyway</string>
    <string name="gps_long_time">GPS can take 2–3 minutes to find location. It also needs to be outdoors. The find can be faster if you chose network location or to get your last known GPS location. What do you choose?</string>
    <string name="gps_location">GPS Location</string>
    <string name="use_my_last_location">Use my last location</string>
    <string name="please_specify_location">Please specify location first</string>
    <string name="prayer_time_config">Prayer Time Configurations</string>
    <string-array name="prayer_times">
        <item>@string/fajr</item>
        <item>@string/sun</item>
        <item>@string/zuhr</item>
        <item>@string/asr</item>
        <item>@string/maghrib</item>
        <item>@string/ishaa</item>
    </string-array>
    <string name="or">OR</string>
    <string name="hmonth1">Muharram</string>
    <string name="hmonth2">Safar</string>
    <string name="hmonth3">Rabi al-awwal</string>
    <string name="hmonth4">Rabi al-achir</string>
    <string name="hmonth5">Jumada al-awwal</string>
    <string name="hmonth6">Jumada l-akhira</string>
    <string name="hmonth7">Rajab</string>
    <string name="hmonth8">Shaban</string>
    <string name="hmonth9">Ramadan</string>
    <string name="hmonth10">Shawwal</string>
    <string name="hmonth11">Dhu l-Qaʿda</string>
    <string name="hmonth12">Dhū l-Hijja</string>
    <string name="gmonth1">January</string>
    <string name="gmonth2">February</string>
    <string name="gmonth3">March</string>
    <string name="gmonth4">April</string>
    <string name="gmonth5">May</string>
    <string name="gmonth6">June</string>
    <string name="gmonth7">July</string>
    <string name="gmonth8">August</string>
    <string name="gmonth9">September</string>
    <string name="gmonth10">October</string>
    <string name="gmonth11">November</string>
    <string name="gmonth12">December</string>
    <string name="systemLanguage">en</string>
    <string name="delete_alarm">Delete the alarm</string>
    <string name="skip_next_alarm">Skip next alarm</string>
    <string name="unskip_next_alarm">Cancel skip of next alarm</string>
    <string name="preview_alarm">Preview Alarm</string>
    <string name="duplicate_alarm">Duplicate Alarm</string>
    <string name="one_time">One time</string>
    <string name="everyday">Everyday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="allDaysExpect1Day">Everyday expect %1$s</string>
    <string name="allDaysExpect2Days">Everyday expect %1$s and %2$s</string>
    <string name="not_connected">You are not connected to the internet</string>
    <string name="beforeTimeBy">- %1$d m</string>
    <string name="afterTimeBy">+ %1$d m</string>
    <string name="afterNDays">After %1$d days</string>
    <string name="afterNHours">After %1$s hours</string>
    <string name="afterNMinutes">After %1$s min.</string>
    <string name="afterNHoursAndNMinutes">After %1$s hours, %2$s min.</string>
    <string name="afterNDaysAndNHours">After %1$s days, %2$s hours</string>
    <string name="all_times">All times</string>
    <string name="all_prayers">All prayers</string>
    <string name="time_s">Time(s):</string>
    <string name="select">Select</string>
    <string name="beforeTime">Before Time</string>
    <string name="afterTime">After Time</string>
    <string name="select_times_you_need">Select times you need to set alarm</string>
    <string name="specify_a_time_or_more_below">Please specify a time or more below to set alarm. For example, if you want to set alarm for Fajr, select Fajr. If you want to set alarm for Juhmaah, select zuhr</string>
    <string name="before_or_after">Before or After?</string>
    <string name="specify_whether_to_set_alarm_before_or_after_time">Please specify whether to set alarm before or after time. For example, you may need to set alarm 5 minutes before Zuhr or 20 minutes after Fajr</string>
    <string name="hours">Hours</string>
    <string name="minutes">Minutes</string>
    <string name="repeated_alarm">Repeated alarm</string>
    <string name="select_weekly_days_of_repeating_alarm">Select weekly days of repeating alarm</string>
    <string name="select_the_weekly_days_the_alarm_will_repeat_on">Select the weekly days the alarm will repeat on.</string>
    <string name="do_you_want_a_snooze_for_the_alarm">Do you want a snooze for the alarm?</string>
    <string name="please_specify_the_snooze_settings">Please specify the snooze settings for alarm. This is useful for giving you some period and re-run alarm after that period.</string>
    <string name="how_many_snoozes">How many snoozes can you get at maximum?</string>
    <string name="none">None</string>
    <string name="unlimited">Unlimited</string>
    <string name="customize">Customize</string>
    <string name="snooze_period">Snooze Period:</string>
    <string name="select_if_repeat_alarm">Select if you want to repeat alarm</string>
    <string name="specify_if__set_one_time_alarm_or_repeat">Please specify if you want to set one-time alarm or, repeat the alarm on weekly days</string>
    <string name="not_now">Not Now</string>
    <string name="islamic_academy">Islamic Academy</string>
    <string name="safeer_al_islam">Safeer Al-Islam</string>
    <string name="islamic_academy_descr">An online free islamic academy, for teaching Quran, Hadith, and other islamic topics</string>
    <string name="islamic_academy_ad_overview">We are inviting students and teachers to register in our academy. We are accepting all students need to study Islam. We are hiring teachers who have the required knowledge and want to teach others (without salary)</string>
    <string name="register_for_free">Register for Free</string>
</resources>