<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.alarmedit.SelectDaysEditAlarmFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_if_repeat_alarm"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/specify_if__set_one_time_alarm_or_repeat"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/radioGroupOneTimeRepeat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioOneTime"
                        android:checked="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/one_time" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioRepeated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/repeated_alarm" />
                </RadioGroup>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardRepeatDays"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_weekly_days_of_repeating_alarm"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_the_weekly_days_the_alarm_will_repeat_on"
                    android:textSize="15sp" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="4"
                    android:rowCount="2">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkFri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/friday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkSat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkSun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkMon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/monday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkTues"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkWedns"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkThurs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday" />
                </GridLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</ScrollView>