<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_tools"
        android:icon="@drawable/baseline_settings_24"
        android:title="@string/menu_Settings"
        android:orderInCategory="100"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/menu_share"
        android:orderInCategory="101"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_academy"
        android:icon="@drawable/ic_baseline_school_24"
        android:title="@string/islamic_academy"
        android:orderInCategory="102"
        app:showAsAction="ifRoom" />
</menu>
