<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.alarmedit.SelectTimesEditAlarmFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_times_you_need"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/specify_a_time_or_more_below"
                    android:textSize="15sp" />

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="3"
                    android:rowCount="2">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkFajr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fajr" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkSun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sun" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkZuhr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zuhr" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkAsr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/asr" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkMagrib"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maghrib" />

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/chkIsha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ishaa" />
                </GridLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/space">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/before_or_after"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/specify_whether_to_set_alarm_before_or_after_time"
                    android:textSize="15sp" />

                <RadioGroup
                    android:id="@+id/radioGroupBeforeAfter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioBefore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/beforeTime" />

                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/radioAfter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/afterTime" />
                </RadioGroup>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnCount="2"
                    android:rowCount="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="0"
                        android:layout_margin="@dimen/space"
                        android:gravity="center"
                        android:text="@string/hours"
                        android:textSize="19sp" />

                    <NumberPicker
                        android:id="@+id/numHours"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="0"
                        android:layout_margin="@dimen/space" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_margin="@dimen/space"
                        android:gravity="center"
                        android:text="@string/minutes"
                        android:textSize="19sp" />

                    <NumberPicker
                        android:id="@+id/numMins"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:layout_margin="@dimen/space" />
                </GridLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>