<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.alarmedit.SelectSnoozeEditAlarmFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_a_snooze_for_the_alarm"
            android:textSize="23sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_specify_the_snooze_settings"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_many_snoozes"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/radioGroupMaxSnoozes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioNoSnoozes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/none" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioUnlimitedSnoozes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/unlimited" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radioSpecifiedSnoozes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/customize" />
            </RadioGroup>

            <NumberPicker
                android:id="@+id/numPickerSnoozeCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:visibility="invisible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSnoozePeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/snooze_period"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minutes"
                android:textSize="19sp" />

            <NumberPicker
                android:id="@+id/numMins"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/space" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>